After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757926 - pbutils:encoding-target: Fix string memory leak
pbutils:encoding-target: Fix string memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-11 05:37 UTC by Vineeth
Modified: 2015-11-11 14:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix string leak (929 bytes, patch)
2015-11-11 05:38 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-11-11 05:37:33 UTC
running libs/profile tests results in the following leak

==16990== 128 bytes in 1 blocks are definitely lost in loss record 1,482 of 1,521
==16990==    at 0x402E324: realloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==16990==    by 0x426DCB8: g_realloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==16990==    by 0x42882F6: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==16990==    by 0x428867A: g_string_insert_len (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==16990==    by 0x42889DB: g_string_append_len (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==16990==    by 0x4254131: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==16990==    by 0x4255414: g_build_filename (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==16990==    by 0x404D0DB: gst_encoding_target_subload (encoding-target.c:801)
==16990==    by 0x404D548: gst_encoding_target_load (encoding-target.c:907)
==16990==    by 0x404B7C4: gst_encoding_profile_find (encoding-profile.c:1234)
==16990==    by 0x804C2CE: test_loading_profile (profile.c:477)
==16990==    by 0x4081BAA: srunner_run (check_run.c:450)
==16990==    by 0x4081C62: srunner_run_all (check_run.c:674)
==16990==    by 0x4074A97: gst_check_run_suite (gstcheck.c:825)
==16990==    by 0x80498E0: main (profile.c:704)
Comment 1 Vineeth 2015-11-11 05:38:16 UTC
Created attachment 315225 [details] [review]
fix string leak
Comment 2 Sebastian Dröge (slomo) 2015-11-11 14:41:31 UTC
commit 3f099e3c290dd22cf3e344e53b6de2255c0ba12a
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Wed Nov 11 14:37:21 2015 +0900

    pbutils:encoding-target: Fix string memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=757926