pbutils:encoding-target: Fix string memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=757926